--- a/layout_parts/q4/index.html
+++ b/layout_parts/q4/index.html
@@ -21,15 +21,17 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q4">
-          <div>
-            <div>固定</div>
-            <div>可変</div>
-            <div>固定</div>
-          </div>
-          <div>
-            <div>可変</div>
-            <div>可変</div>
-            <div>固定</div>
+          <div class="q4-main">
+            <div class="q4-content">
+              <div class="q4-content-cell orange">固定</div>
+              <div class="q4-content-cell pink">可変</div>
+              <div class="q4-content-cell blue">固定</div>
+            </div>
+            <div class="q4-content">
+              <div class="q4-content-cell yellow">可変</div>
+              <div class="q4-content-cell red">可変</div>
+              <div class="q4-content-cell green">固定</div>
+            </div>
           </div>
         </div>
         <!-- 回答はクラスq4の要素の中に書いてね -->
