--- a/layout_parts/q5/index.html
+++ b/layout_parts/q5/index.html
@@ -21,15 +21,17 @@
         <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
         <!-- 新たにタグは追加しなくてもできます。 -->
         <div class="q5">
-          <div>8</div>
-          <div>5</div>
-          <div>1</div>
-          <div>7</div>
-          <div>4</div>
-          <div>6</div>
-          <div>2</div>
-          <div>3</div>
-          <div>9</div>
+          <div class="q5-content">
+            <div class="box-q5 text8">8</div>
+            <div class="box-q5 text5">5</div>
+            <div class="box-q5 text1">1</div>
+            <div class="box-q5 text7">7</div>
+            <div class="box-q5 text4">4</div>
+            <div class="box-q5 text6">6</div>
+            <div class="box-q5 text2">2</div>
+            <div class="box-q5 text3">3</div>
+            <div class="box-q5 text9">9</div>
+          </div>
         </div>
         <!-- 回答はクラスq5の要素の中に書いてね -->
       </div>
