--- a/layout_parts/q6/index.html
+++ b/layout_parts/q6/index.html
@@ -25,8 +25,8 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <div>
-                <p>text-align</p>
+              <div class="q6_text">
+                <p class="q6__box_text">text-align</p>
               </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
@@ -34,7 +34,9 @@
             <!-- Q6-1の回答はここに書いてね -->
             <!-- 新たにタグは追加しなくてもできます。 -->
             <div class="q6__box">
-              <p>margin</p>
+                <div class="q6_margin">
+                  <p class="q6__box_text">margin</p>
+                </div>
             </div>
             <!-- Q6-1の回答はここに書いてね -->
           </div>
@@ -47,9 +49,9 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <div>
-              <p>table</p>
+          <div class="q6 q6--around q6_table">
+            <div class="q6_table_box">
+              <p class="q6_around_text">table</p>
             </div>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
@@ -57,8 +59,8 @@
           <!-- Q6-2の回答はここに書いてね -->
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
-          <div class="q6 q6--around">
-            <p>flex</p>
+          <div class="q6 q6--around q6_flex">         
+            <p class="q6_around_text">flex</p>
           </div>
           <!-- Q6-2の回答はここに書いてね -->
 
@@ -66,16 +68,16 @@
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-stable">
-              <p class="q6__box__inner">position固定</p>
+            <div class="q6__box is-stable q6_position">
+              <p class="q6__box__inner stable">position固定</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
 
             <!-- Q6-2の回答はここに書いてね -->
             <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
             <!-- 新たにタグは追加しなくてもできます。 -->
-            <div class="q6__box is-flexible">
-              <p class="q6__box__inner">position可変</p>
+            <div class="q6__box is-flexible q6_position">
+              <p class="q6__box__inner flexible">position可変</p>
             </div>
             <!-- Q6-2の回答はここに書いてね -->
           </div>
