--- a/layout_parts/q7/index.html
+++ b/layout_parts/q7/index.html
@@ -69,7 +69,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--inlineblock">
-            <div class="q7__inner">
+            <div class="q7__inner Q7inlineblock">
               <div class="q7__box q7inlineblock">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               </div>
@@ -109,7 +109,7 @@
           <!-- すでについてるクラスにはstyleを指定しない。styleをつける場合は自分で新たにクラスをつけること -->
           <!-- 新たにタグは追加しなくてもできます。 -->
           <div class="q7 q7--margin">
-            <div class="q7__inner is-full">
+            <div class="q7__inner is-full Q7margin">
               <div class="q7__box q7fixed">
                 <div class="q7__box__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
